-Application removed (ControllerApplication should be used) -Performance increased (regex compiled) -final 0.92 build